Add Splash Screen Add Calculator Screen Connect Firebase add Intent Beteween Screens

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Tasks_Requested_For_Graduation_Year"
         tools:targetApi="31">
         <activity
-            android:name=".ui.CalculatorActivity"
+            android:name=".ui.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,13 +22,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.CalculatorActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
